<resources>
    <string name="app_name">Bottom_Nav_App</string>


    <!-- Bottom Navigation -->
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="search">Search</string>
    <string name="account">Account</string>

    <!-- Action Bar -->
    <string name="settings">Settings</string>
    <string name="cart">Shopping Cart</string>

    <string name="content">Content</string>

    <string name="home_fragment">This is the Home Fragment</string>
    <string name="favourites_fragment">All Your Favourites are Here</string>
    <string name="search_fragment">You can search Here</string>
    <string name="account_fragment">Your Account Details are Here</string>

    <string name="settings_fragment">Change Your Settings Here</string>
    <string name="cart_fragment">This is Your Shopping Basket</string>

    <string name="content_fragment">This is the main Content</string>
    <string name="link_to_content_button">Link to Content Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>