<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/mobile_navigation.xml"
    app:startDestination="@id/nav_home">



    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bottom_nav_app.HomeFragment"
        android:label="@string/home">

        <action
            android:id="@+id/nav_home_to_content"
            app:destination="@id/nav_content"
            app:popUpTo="@id/nav_home" />
    </fragment>



    <fragment
        android:id="@+id/nav_content"
        android:name="com.example.bottom_nav_app.ContentFragment"
        android:label="@string/content" />


    <fragment
        android:id="@+id/nav_favourites"
        android:name="com.example.bottom_nav_app.FavouritesFragment"
        android:label="@string/favourites" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.bottom_nav_app.SearchFragment"
        android:label="@string/search" />


    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.bottom_nav_app.AccountFragment"
        android:label="@string/account" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.bottom_nav_app.SettingsFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/nav_shopping"
        android:name="com.example.bottom_nav_app.ShoppingFragment"
        android:label="@string/cart" />




</navigation>